--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ulasisiklar.netlify.app/"
+baseURL = "https://www.ulasisiklar.com/"
 languageCode = "tr-tr"
 title = "Ulaş Işıklar"
 theme = "personal-web"
